vlib/v/parser/tests/embed_file_evaluated_but_not_used_selector.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_selector.vv:2:21: error: expression evaluated but not used
    1 | fn main() {
    2 |     $embed_file(@FILE).path
      |                        ~~~~
    3 | }
