vlib/v/parser/tests/embed_file_evaluated_but_not_used_selector.vv
fn main() {
	$embed_file(@FILE).path
}
